update home comp

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,7 +1,10 @@
-.spacer {
-    flex: 1 1 auto;
-  }
+.toggle {
+  width: 100%;
+  margin: auto;
+  margin-top: 20px;
+  text-align: center;
+}
 
-button {
-    margin-left: 550px;
+.title  {
+  margin-bottom: 10px;
 }
