--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,7 @@
 
-<p>home works</p>
-
-
+<div  class="toggle">
+    <div class="title">Please select to list active or completed requests</div>
+    <button mat-stroked-button>active</button>
+    <span> &nbsp;|&nbsp; </span>
+    <button mat-stroked-button>completed</button>
+</div>
