--- a/src/app/pages/modals/add/add.component.html
+++ b/src/app/pages/modals/add/add.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Dialog with elements</h1>
+<h1 mat-dialog-title>Create new request</h1>
 <div mat-dialog-content>
   <form [formGroup]="form">
     <mat-form-field class="max-width" appearance="fill">
