--- a/src/app/pages/modals/update-modal/update-modal.component.html
+++ b/src/app/pages/modals/update-modal/update-modal.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Dialog with elements</h1>
+<h1 mat-dialog-title>Update request</h1>
 <div mat-dialog-content>
   <form>
     <mat-form-field class="max-width" appearance="fill">
